--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,41 @@
-<p>sidebar works!</p>
+<section class="sidebar">
+  <div class="invoice-btn">
+    <a>
+      {{invoiceBtn}}
+    </a>
+  </div>
+
+  <div class="main">
+    {{main}}
+  </div>
+
+  <div class="overview">
+    <i class="material-icons">assessment</i>
+    <span>overview</span>
+  </div>
+
+
+  <div class="transactions">
+    <div class="transact-container" *ngFor="let transact of listItem">
+      <h3>{{transact.type}}</h3>
+      <div class="transact-list-container">
+        <ul *ngFor="let link of transact.items">
+          <li>
+            <a>
+              <i class="material-icons" *ngIf="transact.type === 'payments' && link !== 'manual settlement'">account_balance_wallet</i>
+              <i class="material-icons" *ngIf="transact.type === 'payments' && link === 'manual settlement'">radio_button_checked</i>
+              <i class="material-icons" *ngIf="transact.type === 'orders'">list</i>
+              <span class="transact-link">{{link}}</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="merchant-profile">
+    <i class="material-icons">person</i>
+    <span>User profile</span>
+  </div>
+</section>
