--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -50,6 +50,7 @@ ul.menu{
   display: block;
   background-color: transparent;
   padding: 1.2rem 1.4rem;
+  color: rgb(73, 70, 70);
   text-align: center;
   font-size: 1.1rem;
   position: relative;
