--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,7 +1,7 @@
 .sidebar{
   padding: 1rem 0;
   margin-top: .5rem;
-  width: 30vw;
+  width: 20vw;
   background: #fff
 }
 
@@ -59,8 +59,15 @@
 
 .transact-container ul li a, .merchant-profile {
   display: flex;
+  cursor: pointer;
   justify-content: start;
+  font-size: .9rem;
+  transition: all .2s linear;
   align-items: center;
+}
+
+.transact-container ul li a:hover{
+  color: lightgray
 }
 
 .transact-container ul li a i, .merchant-profile i{
