finished front end design

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,12 +5,7 @@
       TransMonitor
     </a>
 
-    <form class="">
-      <div>
-        <i class="prefix material-icons">search</i>
-        <input type="text" id="search" placeholder="Search">
-      </div>
-    </form>
+    <app-form></app-form>
 
     <ul class="menu">
       <li><a href="!#">Support</a></li>
