--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -2,16 +2,19 @@
   --box-shadow : 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2)
 }
 
+/* our container */
 .container{
   padding: 3rem 0
 }
 
+/* the container of each transaction value container and the trasnaction itself */
 .transact-val-container, .transact-val-container .transact{
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+/* each transaction -- Daily transaction/total */
 .transact-val-container .transact{
   margin: 1rem .4rem;
   background: #fff;
@@ -19,7 +22,6 @@
   padding: .5rem 0;
   box-shadow: var(--box-shadow);
 }
-
 
 
 .transact p{
@@ -32,5 +34,5 @@
   width: 60px;
   height: 40px;
   background: grey;
-  margin-left: .4rem
+  margin-left: .46em
 }
