--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,9 @@
       TransMonitor
     </a>
 
-    <app-form></app-form>
+    <div style="margin-top: 1.2rem; margin-left: auto">
+      <app-form></app-form>
+    </div>
 
     <ul class="menu">
       <li><a href="!#">Support</a></li>
