--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -6,7 +6,9 @@
           <p>{{transactItem.title}}</p>
           <h6>{{transactItem.numbers}}</h6>
         </div>
-        <div class="graph-image"></div>
+        <div class="graph-image">
+          <img src="../../../assets/mockups/blue-line-graph-icon-isometric-style-vector-22282521.jpg" style="width: 60px; height: 40px; object-fit: cover;">
+        </div>
       </div>
     </div>
   </div>
