--- a/src/app/components/contents/payment-item/payment-item.component.css
+++ b/src/app/components/contents/payment-item/payment-item.component.css
@@ -1,7 +1,7 @@
 .product-item-container{
-  --box-shadow : 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),
+  /* --box-shadow : 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),
   0 1px 5px 0 rgba(0,0,0,0.2);
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow); */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   padding: 1rem .5rem;
